--- a/project 1.html
+++ b/project 1.html
@@ -9,6 +9,7 @@
 <body>
 <h1>Fundementals of Web Development</h1>
   <p><em>By Randy Connolly and Ricardo Hoar</p></em>
-  <a>https://raw.githubusercontent.com/funwebdev-3rd-ed/projects-start/master/chapter03/project1/cover-small.png
+  <a><img>https://raw.githubusercontent.com/funwebdev-3rd-ed/projects-start/master/chapter03/project1/cover-small.png</a>
+  <p>This textbook covers a broad range of topics required for modern web development.
 </body>
 </html>
