--- a/project 1.html
+++ b/project 1.html
@@ -11,5 +11,9 @@
   <p><em>By Randy Connolly and Ricardo Hoar</p></em>
   <a><img>https://raw.githubusercontent.com/funwebdev-3rd-ed/projects-start/master/chapter03/project1/cover-small.png</a>
   <p>This textbook covers a broad range of topics required for modern web development.
+    <p><a>Learn more
+      <h2>First Chapter</h2>
+      <ol>
+        <li>Introduction to Web Development
 </body>
 </html>
