--- a/project 1.html
+++ b/project 1.html
@@ -15,8 +15,8 @@
       <h2>First Chapter</h2>
       <ol>
         <li>Introduction to Web Development
-          How the Webs Works
-          Introduction to HTML
-          Introduction to CSS
+          <li>How the Webs Works
+          <li>Introduction to HTML
+          <li>Introduction to CSS
 </body>
 </html>
