--- a/project 1.html
+++ b/project 1.html
@@ -11,7 +11,7 @@
   <p><em>By Randy Connolly and Ricardo Hoar</p></em>
   <a><img src="cover-small.png" alt="https://raw.githubusercontent.com/funwebdev-3rd-ed/projects-start/master/chapter03/project1/cover-large.png"></a>
   <p>This textbook covers a broad range of topics required for modern web development.
-    <p><a href="<a href="https://raw.githubusercontent.com/funwebdev-3rd-ed/projects-start/master/chapter03/project1/cover-large.png">learn more</a>
+    <p><a href="<a href="http:///www.funwebdev.com">learn more</a>
       <h2>First Chapter</h2>
       <ol>
         <li>Introduction to Web Development
