--- a/project 1.html
+++ b/project 1.html
@@ -9,9 +9,11 @@
 <body>
 <h1>Fundementals of Web Development</h1>
   <p><em>By Randy Connolly and Ricardo Hoar</p></em>
-  <a><img src="cover-small.png" alt="https://raw.githubusercontent.com/funwebdev-3rd-ed/projects-start/master/chapter03/project1/cover-large.png"></a>
+  <a href="cover-small.png">
+  <img src="cover-large.png" alt="small cover">
+</a>
   <p>This textbook covers a broad range of topics required for modern web development.
-    <p><a href="<a href="http:///www.funwebdev.com">learn more</a>
+    <p><a href="<a href="http:///www.funwebdev.com">Learn more</a>
       <h2>First Chapter</h2>
       <ol>
         <li>Introduction to Web Development
