--- a/project 1.html
+++ b/project 1.html
@@ -8,10 +8,10 @@
 </head>
 <body>
 <h1>Fundementals of Web Development</h1>
-  <p><em>By Randy Connolly and Ricardo Hoar</p></em>
+  <p><em>By Randy Connolly and Ricardo Hoar</em>
 <a href="cover-large.png"><img src="cover-small.png"></a>
   <p>This textbook covers a broad range of topics required for modern web development.
-    <p><a href="<a href="http:///www.funwebdev.com">Learn more</a>
+    <p><a>< href="<a href=" http:/>/>/>www.funwebdev.com>Learn more</a>
       <h2>First Chapter</h2>
       <ol>
         <li>Introduction to Web Development
