--- a/project 1.html
+++ b/project 1.html
@@ -9,7 +9,7 @@
 <body>
 <h1>Fundementals of Web Development</h1>
   <p><em>By Randy Connolly and Ricardo Hoar</em>
-<a href="cover-large.png"><img src="cover-small.png" alt="cover-small"></a>
+<p><a href="cover-large.png"><img src="cover-small.png" alt="cover-small"></a>
   <p>This textbook covers a broad range of topics required for modern web development.
     <p><href="<a href=" http:/>/>/>www.funwebdev.com>Learn more</a>
       <h2>First Chapter</h2>
