--- a/project 1.html
+++ b/project 1.html
@@ -11,8 +11,8 @@
   <p><em>By Randy Connolly and Ricardo Hoar</em>
 <p><a href="cover-large.png"><img src="cover-small.png" alt="cover-small"></a>
   <p>This textbook covers a broad range of topics required for modern web development.
-    <p><href="<a href= http:/>/>/>www.funwebdev.com">Learn more</a>
-      <p><h2>First Chapter</h2>
+    <href="<a href= http:/>/>/>www.funwebdev.com">Learn more</a>
+      <h2>First Chapter</h2>
       <ol>
         <li>Introduction to Web Development
           <li>How the Webs Works
