--- a/project 1.html
+++ b/project 1.html
@@ -11,7 +11,7 @@
   <p><em>By Randy Connolly and Ricardo Hoar</em></p>
   <p><a href="cover-large.png"><img src="cover-small.png" alt="cover-small"></a></p>
   <p>This textbook covers a broad range of topics required for modern web development.</p>
-  <a href="http:/>/>/>www.funwebdev.com" target="_blank">Learn More</a>
+  <a href= "http:///www.funwebdev.com">Visit W3Schools</a>
       <h2>First Chapter</h2>
       <ol>
         <li>Introduction to Web Development
