--- a/project 1.html
+++ b/project 1.html
@@ -12,7 +12,7 @@
   <p><a href="cover-large.png"><img src="cover-small.png" alt="cover-small"></a></p>
   <p>This textbook covers a broad range of topics required for modern web development.</p>
   <p>
-  <a href= "http:///www.funwebdev.com">Visit W3Schools</a>
+  <a href= "http:///www.funwebdev.com">Learn More</a>
   </p>
       <h2>First Chapter</h2>
       <ol>
