--- a/project 2.html
+++ b/project 2.html
@@ -6,7 +6,7 @@
 </head>
 <body>
    <div>
-      <img src="images/share-logo.png" alt="logo"/>   
+      <img src="share-logo.png" alt="logo"/>   
       <p>
          <a href="#description">Description</a> | <a href="#related">Related</a> | <a href="#reviews">Reviews</a>
       </p>
@@ -20,13 +20,13 @@
         <a href="https://en.wikipedia.org/wiki/Venice">Venice</a>
         was taken from the <strong>Ponte di Rialto</strong>.
      </p>
-     <img src="images/venice.jpg" alt="Venice" />
+     <img src="venice.jpg" alt="Venice" />
      <p>Photo by Randy Connolly</p>
    </div>
 
    <div>
       <h3 id="related">Related Images</h3>
-      <img src="images/v1.jpg" alt="More Venice" /><img src="images/v2.jpg" alt="More Venice" /><img src="images/v3.jpg" alt="More Venice" />
+      <img src="v1.jpg" alt="More Venice" /><img src="v2.jpg" alt="More Venice" /><img src="v3.jpg" alt="More Venice" />
    </div>
 
    <div>
