--- a/project 3.html
+++ b/project 3.html
@@ -2,15 +2,12 @@
 
 <html>
     <head>
-        <title>My Sample Art Store</title>
+        <title>My Art Museum</title>
         <meta charset="UTF-8">
             <meta name="viewport" content="initial-scale=1.0">
                 </head>
     
     <body>
         <header><img src="gallery-header.jpg" alt="Gallery Banner">
-        <a href="default.asp">
-  <img src="gallery-header.jpg" alt="HTML tutorial">
-</a>
     </body>
  
