--- a/project 3.html
+++ b/project 3.html
@@ -8,6 +8,10 @@
                 </head>
     
     <body>
-        <header><img src="gallery-header.jpg" alt="Gallery Banner">
+        <header><img src="gallery-header.jpg" alt="Gallery Banner"></header>
+        <a href="default.asp">
+  <img src="gallery1.png" alt="Museum" style="width:42px;height:42px;">
+</a>
+            
     </body>
  
