--- a/project 3.html
+++ b/project 3.html
@@ -9,7 +9,7 @@
     
     <body>
         <header><img src="gallery-header.jpg" alt="Gallery Banner"></header>
-        <a href="default.asp">
+        <a href="http://www.nga.gov/content/ngaweb.html.asp">
   <img src="gallery1.png" alt="Museum" style="width:42px;height:42px;">
 </a>
             
