--- a/ch4-project1.html
+++ b/ch4-project1.html
@@ -12,7 +12,7 @@
 
    <article>
 
-        <img src="images/hero.jpg" alt="hero" class="hero"/>  
+        <img src="hero.jpg" alt="hero" class="hero"/>  
         <h1>Morning Ride Along the Beach</h1>
         <div id="details">By Anton Mauve | 1876 | Oil on Canvas</div>
         <p>
